--- a/code/demo/demo.css
+++ b/code/demo/demo.css
@@ -1,27 +1,28 @@
-.box{
+.box {
 	width: 500px;
 	height: 500px;
 	background-color: pink;
-	display: flex;
+	display: grid;
+	/* grid-template-areas: 'image text list'; */
+	/* grid-template-areas: 'image' 'list' 'text'; */
+	/* grid-template-areas: 'image text' 'image list'; */
+	/* grid-template-areas: 'text image' 'list image'; */
+	/* grid-template-areas: 'image image' 'list text'; */
+	grid-template-areas: 'list text' 'image image';
 
-	.item{
-		width: 100px;
-		height: 100px;
-	}
-	.a{
-		
-		background-color: aqua;
-		flex-basis: 10%;
-	}
-	.b{
+}
 
-		background-color: red;
-		flex-basis: 100%;
-		flex-shrink: 0;
-	}
+.a {
+	background-color: aqua;
+	grid-area: image;
+}
 
-	.c{
-		background-color: #000;
-		flex-basis: 20%;
-	}
+.b {
+	background-color: aquamarine;
+	grid-area: list;
+}
+
+.c {
+	background-color: RED;
+	grid-area: text;
 }
